@@ -17,6 +17,7 @@
   * Fixed a segfault when GC occurs during xpath handler argument marshalling. #345
   * Added hack to Slop decorator to work with previously defined methods. #330
   * Fix a memory leak when duplicating child nodes. #353
+  * Fixed off-by-one bug with nth-last-{child,of-type} CSS selectors when NOT using an+b notation. #354
 
 === 1.4.3 / 2010/07/28
 
